created models DTO and updated openapi spec
